# c-snippets

./: CMakeLists.txt  README.md  build-and-run.sh  build-and-test.sh  install-requirements.sh  leak-check.sh
src/: CMakeLists.txt  main.c
src/bool_lib/: bool_lib.c
src/c_string/: CMakeLists.txt  c_string.c  c_string.h
src/linked_list/: CMakeLists.txt  linked_list.c  linked_list.h
src/memfunc/: CMakeLists.txt  memfunc.c  memfunc.h
src/prime/: CMakeLists.txt  prime.c  prime.h
src/vector/: CMakeLists.txt  vector.c  vector.h
tests/: test_bool_test.cpp  test_c_string.cpp  test_linked_list.cpp  test_memfunc.cpp  test_prime.cpp
